fix for spacing in moble bar and stage button

--- a/ui/client-react/src/components/stage/stage.scss
+++ b/ui/client-react/src/components/stage/stage.scss
@@ -16,6 +16,7 @@
         border-radius: 0 0 2px 2px;
         background-color: $color17;
         outline: none;
+        z-index: $zindex-dropdown;
     }
 
     .well {
